--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/logo/logo-white.svg" />
+        <link rel="icon" type="image/svg+xml" href="/icons/react.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Code Runner</title>
+        <title>Animation</title>
     </head>
     <body>
         <div id="root" class="root"></div>
